work with project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,2 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
-.gradle/
-out/
-gradle/
-/build/
-.idea/
-gradlew
-gradlew.bat
-NSULabs_Java.iml
 
-# Ignore Gradle project-specific cache directory
-.gradle
-
-# Ignore Gradle build output directory
-build
-.gitattributes
-build.gradle
-settings.gradle
+lab2/lab2.iml
