--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ lab3/settings.gradle
 lab3/gradlew
 lab3/gradle/wrapper/gradle-wrapper.jar
 lab3/gradle/wrapper/gradle-wrapper.properties
+lab3/build/
