--- a/lab2/.gitignore
+++ b/lab2/.gitignore
@@ -1,25 +1,6 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
-.gradle/
-out/
-gradle/
-/build/
+lab3/
+lab2/lab2.iml
+lab1/
+lab2/.idea/
 .idea/
-gradlew
-gradlew.bat
-NSULabs_Java.iml
-
-# Ignore Gradle project-specific cache directory
-.gradle
-
-# Ignore Gradle build output directory
-build
-.gitattributes
-build.gradle
-settings.gradle
+lab4/
